--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,57 +1,15 @@
-.projectContainer__projects {
-    display: flex; 
-    flex-wrap: wrap; 
-    justify-content: center; 
-    gap: 15px; 
-}
-.projectContainer__projects {
-    display: flex; 
-    flex-wrap: wrap; 
-    justify-content: center; 
-    gap: 15px; 
-    max-width: 1100px; /* Adjust this based on your layout */
-    margin: 0 auto; /* Centering */
-}
+@import url('https://fonts.googleapis.com/css2?family=Alata&family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .project {
     position: relative;
-    width: 350px;
-    height: 179px;
+    width: 100%;
+    max-width: 600px;
+    margin: 20px auto;
+    height: auto;
     overflow: hidden;
     border-radius: 10px;
     cursor: pointer;
     transition: transform 0.3s ease;
-    flex: 1 1 calc(33.333% - 30px); 
-    max-width: 350px;
-}
-
-
-@media (max-width: 1100px) {
-    .project {
-        flex: 1 1 calc(50% - 30px); 
-    }
-}
-
-@media (max-width: 768px) {
-    .project {
-        flex: 1 1 100%; 
-    }
-}
-
-
-.title1
-{
-  color:white;
-  size:30px;
-  text-align: center;
-  padding-bottom: 20px;
-}
-.title2
-{
-    color:white;
-    size:20px;
-    text-align: center;
-    padding-bottom: 20px;
 }
 
 .project img {
@@ -67,17 +25,16 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: pink; 
-    color: black; 
+    color: white; 
     display: flex;
     flex-direction: column;
-    justify-content: center; 
-    align-items: center; 
-    text-align: center; 
-    opacity: 0; 
-    transition: opacity 0.3s ease;
-    padding: 20px; 
-    box-sizing: border-box; 
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 
@@ -87,17 +44,4 @@
 
 .project:hover img {
     opacity: 0;
-}
-
-
-.project__overlay h4 {
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 8px; 
-}
-
-.project__overlay p {
-    font-size: 14px;
-    margin: 0;
-    max-width: 80%; 
 }
